# nemo-vietnamese-asr

./: .gitignore  NVIDIA_NeMo_ASR.ipynb  README.md  benchmark.py  links.txt  prepare_data.py  pyproject.toml  requirements.txt  test_manifest.json  train_manifest.json
github/workflows/: run_tests.yml
src/: __init__.py  inference.py  model_utils.py
src/yt_harvester/: __init__.py  __main__.py  cli.py  config.py  downloader.py  processor.py  utils.py
src/yt_harvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
structured_outputs/: 04jhP_1G24M.txt  1O-_3tNNjCs.txt  LuqbgQRiC8Y.txt  OLbDJODC8WU.txt  dDn99J3VSHY.txt  hz9JVtmLL7E.txt  jjXqPEEUWks.txt  oNPGQn18Tq4.txt  qZuxop5xj_E.txt  qqaI4hnim7Q.txt
tests/: __init__.py  conftest.py  test_data_integrity.py  test_text_processing.py
transcripts/: 04jhP_1G24M.txt  1O-_3tNNjCs.txt  LuqbgQRiC8Y.txt  OLbDJODC8WU.txt  dDn99J3VSHY.txt  hz9JVtmLL7E.txt  jjXqPEEUWks.txt  oNPGQn18Tq4.txt  qZuxop5xj_E.txt
